--- a/frontend/src/patient/pages/cart/CartPage.module.css
+++ b/frontend/src/patient/pages/cart/CartPage.module.css
@@ -14,8 +14,8 @@
     overflow-x: hidden;
   }
   .cartItem{
-    height: 490px;
-    overflow-y: scroll;
+    height: 430px; 
+    overflow-y: auto;
     width: 500px;
   }
  /* background-size: cover;  Scale the image to cover the entire container */
@@ -26,7 +26,6 @@
     display: flex;
     justify-content: flex-end; /* Align content to the right */
     position: relative;
-    right: 270px;
   }
   .summary {
     text-align: right;
@@ -35,43 +34,33 @@
     color: gray;
     text-align: left;
     position: relative;
-    left: 30px;
+    left: 4%;
     font-family: 'manrope', sans-serif;
+    font-size: 12.29px;
   }
   .price{
     text-align:center ;
     position: relative;
-    left: 240px;
-    top: -57px;
+    left: 260%;
+    top: -45px;
     font-weight: bold;
     color: black;
-
   }
+
   .label{
     color: black;
-    font-family: 'poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: normal;
+    font-size: 18.63px;
   }
   .empty{
     color: gray;
     font-family: 'poppins', sans-serif;
-    text-align: center;
-    position: relative;
-    left: -250px;
+    text-align: left;
     font-weight: bold;
-
-  }
-  h1{
-   
-    text-align: center;
-    position: relative;
-    left: 180px;
-    font-family: 'Poppins', sans-serif;
-    
-  }
- .icon{
-    text-align: center;
-  }
+    margin-right: 40%;
+    }
+  
 
   .inc{
     background-color: #193842;
@@ -80,48 +69,52 @@
   .check{
     background-color: #193842;
     color: white;
-    padding: 10px 20px; /* Adjust padding as needed */
-    border: none; /* Remove the default border */
-    border-radius: 10px; /* Apply border-radius to round the corners */
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 10px; 
       
   }
   .more{
     background-color: white;
     color: black;
-    border: none; /* Remove the default border */
-    border-radius: 10px; /* Apply border-radius to round the corners */
+    border: none; 
+    border-radius: 10px; 
     text-decoration: underline;
     font-weight: bold;
   }
   .back{
-    background-color: transparent;;
+    background-color: transparent;
     color: black;
     font-weight: bold;
     border: none; /* Remove the default border */
     border-radius: 10px; /* Apply border-radius to round the corners */
     font-family: 'manrope', sans-serif;
     position: absolute;
-    left: 120px;
+    left: 90%;
+    top: 10%;
     font-size: 16px;
-    top: 80px;
+    
+  }
+  .backarrow{
+    
+    position: absolute;
+    left: 8%;
+    top: 10%;
+  
   }
 
   .rightSection {
-    margin-top: 120px;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-left: 18%;
     justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 33px;
   }
 
-  
-  /* Text color on the background */
-   /* Center the text within the container */
-  
-  /* Define styles for the content within the cart page */
-  /* .cart-page .summary {
+ .total {
+  font-size: 23px;
+  margin-top: 5%;
   }
   
-  .cart-page .total {
-  }
-  
-  .cart-page button.secondary {
-  } */
-  /* <img src={background} alt="background"/> */
