--- a/frontend/src/login/components/Button/Button.module.css
+++ b/frontend/src/login/components/Button/Button.module.css
@@ -5,7 +5,7 @@
     width:250px;
     height:35px;
     background-color: #193842;
-    margin-left: 220px;
+    margin-left: 8rem;
 }
 .submitButton:hover{
     background-color: #132c34;
