--- a/frontend/src/login/components/login.module.css
+++ b/frontend/src/login/components/login.module.css
@@ -36,6 +36,7 @@ body{
     font-size: 18px;
     color:#6B6A6A;
     margin-top: 40px;
+    margin-left: 8rem;
 }
 .signupLink{
     text-decoration: none;
