frontend css draft

--- a/frontend/src/login/components/login.module.css
+++ b/frontend/src/login/components/login.module.css
@@ -115,3 +115,7 @@ body{
     line-height: 30px;
     list-style-image:url('../images/listBullet.png');
 }
+.buttonAndText{
+    text-align: center;
+    margin-left: -100px;
+}
