--- a/frontend/src/patient/pages/cart/CartPage.module.css
+++ b/frontend/src/patient/pages/cart/CartPage.module.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   .backgroundsvg{
     position:absolute;
