--- a/frontend/src/patient/pages/payment/CheckoutForm.css
+++ b/frontend/src/patient/pages/payment/CheckoutForm.css
@@ -6,6 +6,62 @@
   #payment-element{
     padding: 20px;
   }
+  #payment-element .Label{
+    color: #000;
+
+  font-family: 'Poppins',sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  }.cardholdername{
+    width: 638px;
+    height: 51px;
+    margin-left: 638px;
+    margin-top: 20px;
+
+  }
+  .cardholdername input{
+    padding: var(--p-spacing3);
+    background-color: rgba(0, 0, 0, 0.07);
+    border-radius: var(--borderRadius);
+    border: 1px solid var(--p-colorBackgroundDeemphasize10);
+    box-shadow: none;
+    border-bottom-color: black;
+    border-bottom-width: 2px;
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    display: block;
+    color: inherit;
+    width: 600px;
+    height: 51px;
+    margin-left: 55px;
+    margin-top: 100px;
+    padding-left: 15px;
+  }
+  ::placeholder{
+   color: white;
+   opacity: 50%;
+   font-family: 'Poppins',sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  .cardholdername label{
+    
+    color: #000;
+
+    font-family: 'Poppins',sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+    
+  }
   
   #messages {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
