--- a/frontend/src/patient/pages/payment/CheckoutForm.css
+++ b/frontend/src/patient/pages/payment/CheckoutForm.css
@@ -1,75 +1,129 @@
 #payment-form {
-   
-    padding: 40px;
-   
-  }
-  #payment-element{
-    padding: 20px;
-  }
-  #payment-element .Label{
-    color: #000;
+  padding: 40px;
+}
+#payment-element {
+  padding: 20px;
+  border-radius: 10px;
+  border-color: #000;
+}
+.buttons{
+  display: flex;
+}
+.buttons button {
+  /* display: flex; */
+  padding: 10px 71px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 0px 5px 5px 0px;
+  background: var(--white-100, #fff);
+  color: #000;
+  font-family: 'Poppins';
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.buttons div {
+  /* display: flex; */
+  display: flex;
+  padding: 14px 26px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex: 1 0 0;
+  border-radius: 5px 0px 0px 5px;
+background: #000;
+color: var(--white-100, #FFF);
+font-family: 'Poppins';
+font-size: 22px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin-left: 24px;
+width: 50%;
+}
+.input1 {
+  padding: 15px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  border: 1px solid #e6e6e6;
+  box-shadow: none;
+  border-bottom-color: black;
+  border-bottom-width: 2px;
+  border-top-width: 0px;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  display: block;
+  color: inherit;
+  width: 600px;
+  height: 51px;
+  margin-left: 20px;
+  /* margin-top: 100px; */
+  padding-left: 15px;
+  padding-bottom: -10px;
+  color: white;
+  font-family: 'poppins';
+}
+#Field-countryInput {
+  background-color: #000;
+}
 
-  font-family: 'Poppins',sans-serif;
+::placeholder {
+  color: white;
+  opacity: 50%;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.label1 {
+  color: #000;
+
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-transform: uppercase;
-  }.cardholdername{
-    width: 638px;
-    height: 51px;
-    margin-left: 638px;
-    margin-top: 20px;
+  margin-left: 24px;
+  margin-bottom: -130px;
+  padding-bottom: 4px;
+  padding-top: 14px;
+}
+#title,
+#title2 {
+  color: #000;
 
-  }
-  .cardholdername input{
-    padding: var(--p-spacing3);
-    background-color: rgba(0, 0, 0, 0.07);
-    border-radius: var(--borderRadius);
-    border: 1px solid var(--p-colorBackgroundDeemphasize10);
-    box-shadow: none;
-    border-bottom-color: black;
-    border-bottom-width: 2px;
-    border-top-width: 0px;
-    border-left-width: 0px;
-    border-right-width: 0px;
-    display: block;
-    color: inherit;
-    width: 600px;
-    height: 51px;
-    margin-left: 55px;
-    margin-top: 100px;
-    padding-left: 15px;
-  }
-  ::placeholder{
-   color: white;
-   opacity: 50%;
-   font-family: 'Poppins',sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .cardholdername label{
-    
-    color: #000;
+  font-family: 'Poppins';
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: underline;
+}
+#title2 {
+  margin-top: '15px';
+  margin-left: '150px';
+  text-decoration: 'none';
+  font-size: 'smaller';
+  color: 'white';
+  font-weight: 300;
+}
+.hellokitty {
+  width: 68.806px;
+  height: 49.469px;
+  flex-shrink: 0;
+}
 
-    font-family: 'Poppins',sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
-    
-  }
-  
-  #messages {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
-    display: none; /* hide initially, then show once the first message arrives */
-    background-color: #0a253c;
-    color: #00d924;
-    padding: 20px;
-    margin: 20px 0;
-    border-radius: var(--radius);
-    font-size: 0.7em;
-  }
+#messages {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+  display: none; /* hide initially, then show once the first message arrives */
+  background-color: #0a253c;
+  color: #00d924;
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: var(--radius);
+  font-size: 0.7em;
+}
