--- a/frontend/src/patient/pages/payment/CheckoutForm.css
+++ b/frontend/src/patient/pages/payment/CheckoutForm.css
@@ -1,50 +1,61 @@
 #payment-form {
-  padding: 40px;
+  padding: 30px;
+  width: 700px;
 }
 #payment-element {
   padding: 20px;
+  padding-top: 0px;
+  height: smaller;
   border-radius: 10px;
   border-color: #000;
 }
-.buttons{
-  display: flex;
+.buttons {
+  align-items: right;
+  width: 638px;
+  margin-left: 300px;
+}
+#payment-messaage {
+  font-family: 'poppins';
+  font-weight: 100;
 }
 .buttons button {
   /* display: flex; */
-  padding: 10px 71px;
+  padding: 8px 41px;
+  opacity: 0.9;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 0px 5px 5px 0px;
+  gap: 5px;
+  border-radius: 5px 5px 5px 5px;
   background: var(--white-100, #fff);
   color: #000;
   font-family: 'Poppins';
-  font-size: 22px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
-.buttons div {
+#hi {
   /* display: flex; */
-  display: flex;
-  padding: 14px 26px;
+  /* display: flex; */
+  padding: 14px 10px;
   justify-content: center;
   align-items: center;
   gap: 10px;
   flex: 1 0 0;
-  border-radius: 5px 0px 0px 5px;
-background: #000;
-color: var(--white-100, #FFF);
-font-family: 'Poppins';
-font-size: 22px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin-left: 24px;
-width: 50%;
+  border-radius: 5px 5px 5px 5px;
+  background: #000;
+  color: var(--white-100, #fff);
+  font-family: 'Poppins';
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 24px;
+  padding-top: -10px;
+  width: 600px;
 }
 .input1 {
-  padding: 15px;
+  padding: 5px;
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border: 1px solid #e6e6e6;
@@ -57,13 +68,14 @@ width: 50%;
   display: block;
   color: inherit;
   width: 600px;
-  height: 51px;
+  height: 32px;
   margin-left: 20px;
   /* margin-top: 100px; */
   padding-left: 15px;
-  padding-bottom: -10px;
+  padding-bottom: -20px;
   color: white;
   font-family: 'poppins';
+  font-size: 12px;
 }
 #Field-countryInput {
   background-color: #000;
@@ -73,7 +85,7 @@ width: 50%;
   color: white;
   opacity: 50%;
   font-family: 'Poppins', sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -97,7 +109,7 @@ width: 50%;
   color: #000;
 
   font-family: 'Poppins';
-  font-size: 25px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -105,15 +117,15 @@ width: 50%;
 }
 #title2 {
   margin-top: '15px';
-  margin-left: '150px';
+  margin-left: '145px';
   text-decoration: 'none';
   font-size: 'smaller';
   color: 'white';
   font-weight: 300;
 }
 .hellokitty {
-  width: 68.806px;
-  height: 49.469px;
+  width: 58.806px;
+  height: 39.469px;
   flex-shrink: 0;
 }
 
