--- a/frontend/src/medicines/ArchivedMedicines.module.css
+++ b/frontend/src/medicines/ArchivedMedicines.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700&family=Roboto+Flex:opsz,wght@8..144,400;8..144,500;8..144,600;8..144,700&display=swap');
+
 .backArrow {
     position: absolute;
     transform: rotate(90deg);
@@ -9,15 +11,15 @@
   .title {
     text-align: start;
     color: #0C1320;
-    font-family: Roboto Flex;
     font-size: 35px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-bottom: 2%;
+    margin: 0;
   }
   
   .container {
+    font-family: 'Poppins';
     padding: 30px 50px 10px 50px ;
   }
       
@@ -33,6 +35,7 @@
   
 .tableHead{
     border-radius: 14px 14px 0px 0px;
+    color: white;
     background: #6ED294;
     overflow: hidden; 
 }
@@ -70,6 +73,7 @@
   }
 
 .searchBar{
+  font-family: 'Poppins';
     display: flex;
     width: 100%;
     padding: var(--8, 8px) var(--16, 16px);
@@ -79,16 +83,14 @@
     background: var(--colors-back-ground-blue-white-text, #F8F9FD);
     border-style: none;
     color: var(--text-icons-grey, #45464a);
-    font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 }
 .searchContainer{
-    margin-top: 30px;
-    margin-bottom: 30px;
     display: flex;
+    margin-left: 30px;
     flex: 1;
     width: 50%;
     padding: var(--8, 8px) var(--16, 16px);
@@ -121,21 +123,21 @@
     gap: 10px;
     flex-shrink: 0;
     border-style: none;
-    border-radius: 0px 5px 5px 0px;
-    background: rgb(190, 190, 190);
+    color: white;
+    border-radius: 8px;
+    background: #3f9f64;
     margin: 2%;
     box-shadow: 6px 6px 33px 0px rgba(0, 0, 0, 0.25);
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .unarchiveButton:hover{
-    background: rgb(77, 77, 77);
+    background: #2c6f45;
 }
 .searchAndUnarchiveContainer {
     display: flex;
     align-items: center;
     gap: 16px; /* Adjust the gap as needed */
-    margin-top: 30px;
-    margin-bottom: 30px;
     width: 65%;
+    margin-block: 10px;
   }
