--- a/frontend/src/patient/pages/payment/CheckoutForm.css
+++ b/frontend/src/patient/pages/payment/CheckoutForm.css
@@ -135,14 +135,27 @@
   height: 39.469px;
   flex-shrink: 0;
   padding: 5px;
-  outline: 1px solid white;
+  outline: 3px solid black;
   border-radius: 5px;
+  transition: all 0.2s ease;
+  cursor: pointer;
 }
 .hellokitty.active {
   /* Define highlighted effect styles like shadow, outline, etc. */
   /* For example: */
-  box-shadow: 0 0 7px #000;
+  box-shadow: 0 0 10px 2px white;
+  transform: scale(1.2);
+  transition: all 0.2s ease;
  
+}
+.choicePayment {
+  font-family: 'Inter';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 0px 0px 0px 10px;
+  margin-bottom: 15px;
 }
 
 #messages {
