Feat: Sales report missing revenue & profit

--- a/frontend/src/admin/Home/AdminHome.module.css
+++ b/frontend/src/admin/Home/AdminHome.module.css
@@ -396,5 +396,114 @@ font-weight: 500;
 line-height: 16px; 
 margin-left: 5%;
 }
+.rev, .profit{
+  display: inline-flex;
+padding: 16.339px 28.834px 26.473px 13.456px;
+flex-direction: column;
+align-items: flex-start;
+gap: 33.639px;
+border-radius: 15.378px;
+border: 0.961px solid var(--Stroke-3, #E2E8F0);
+background: var(--white-100, #FFF);
+width: 30%;
+margin-top: 2%;
+height:140px;
 
+}
+.rev{
+  margin-left: 5%;
+  margin-right: 5%;
+
+}
+.profit{
+  margin-right: 30%;
+}
+.cur{
+  color: #000;
+  font-family: 'SF Pro Display';
+  font-size: 23.067px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 23.067px */
+  position: inherit;
+}
+.prev{
+  color: #000;
+  font-family: 'SF Pro Display';
+  font-size: 13.456px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 13.456px */
+}
+.salesT{
+  color: var(--Text-900, #0F172A);
+font-family: 'Poppins';
+font-size: 13.456px;
+font-style: normal;
+font-weight: 600;
+line-height: 100%; /* 13.456px */
+margin-top: 2%;
+}
+.parentContainer {
+  display: flex;
+  gap: 20px; /* Adjust the gap as needed */
+}
+
+
+
+.yearly {
+  width: 721px;
+  height: 271px;
+  flex-shrink: 0;
+  border-radius: 13.273px;
+  border: 0.83px solid var(--Stroke-3, #E2E8F0);
+  background: var(--white-100, #FFF);
+  box-shadow: 0px 0.83px 1.659px 0px rgba(0, 0, 0, 0.05);
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-right: 2%;
+}
+
+.recentOrders {
+  display: flex;
+  width: 500.596px;
+  height: 344.278px;
+  padding: 20.74px 16.592px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 19.91px;
+  flex-shrink: 0;
+  border-radius: 13.273px;
+border: 0.83px solid var(--Stroke-3, #E2E8F0);
+background: var(--white-100, #FFF);
+box-shadow: 0px 0.83px 1.659px 0px rgba(0, 0, 0, 0.05);
+margin-top: 2%;
+margin-left: 0%;
+max-height: 400px; /* Adjust the height according to your design */
+overflow-y: auto;
+}
+.recentOrders::-webkit-scrollbar {
+  width: 4px; /* For Chrome, Safari, and Opera */
+}
+.itemCount{
+
+}
+.medicineImage{
+  display: flex;
+width: 39.82px;
+height: 39.82px;
+justify-content: center;
+align-items: center;
+gap: 13.624px;
+flex-shrink: 0;
+}
+.ordersT{
+  margin-top: -5%;
+  color: var(--Text-900, #0F172A);
+font-family: 'SF Pro Display';
+font-size: 11.614px;
+font-style: normal;
+font-weight: 400;
+line-height: 100%; /* 11.614px */
+}
 
