--- a/frontend/src/admin/Home/AdminHome.module.css
+++ b/frontend/src/admin/Home/AdminHome.module.css
@@ -1,4 +1,4 @@
-.sales,.requests, .packages, .users, .revenue{
+.sales,.requests, .packages, .users, .revenue, .addAdmin{
   flex-shrink: 0;
   border-radius: 20px;
   border: 1px solid #F8F9FA;
@@ -485,9 +485,6 @@ overflow-y: auto;
 .recentOrders::-webkit-scrollbar {
   width: 4px; /* For Chrome, Safari, and Opera */
 }
-.itemCount{
-
-}
 .medicineImage{
   display: flex;
 width: 39.82px;
@@ -505,5 +502,38 @@ font-size: 11.614px;
 font-style: normal;
 font-weight: 400;
 line-height: 100%; /* 11.614px */
+}
+.addAdmin{
+  position: absolute;
+  top:65%;
+  left: 78%; 
+  width: 300px;
+  height: 200.955px;
+
+}
+.adminButton{
+  color: var(--primary-dark-shade, #05004E);
+  font-family: 'Poppins';
+  font-size: 29px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  position: relative;
+  top:40%;
+  left:18%;
+  border-color: transparent;
+  background-color: white;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Set a high z-index value to ensure it appears above other content */
 }
 
