refactoring: login with its components and some styling for some pages

--- a/frontend/src/login/components/InputField/InputField.module.css
+++ b/frontend/src/login/components/InputField/InputField.module.css
@@ -4,6 +4,10 @@
   border-bottom: 1px solid #a0a0a0; 
   outline: none; 
 }
+.inputField::placeholder{
+  color: black;
+  font-size: large;
+}
 .container{
   display: flex;
   justify-content: center;
