--- a/frontend/src/patient/pages/browseMedicine/BrowseMedicine.module.css
+++ b/frontend/src/patient/pages/browseMedicine/BrowseMedicine.module.css
@@ -113,6 +113,7 @@
     justify-content: center;
     align-items: center;
     height: 110px;
+    width: auto;
     border: 1px solid #C3C3C3;
     border-radius: 12px;
     padding: 4px;
