--- a/frontend/src/patient/pages/cart/CartPage.module.css
+++ b/frontend/src/patient/pages/cart/CartPage.module.css
@@ -1,17 +1,16 @@
 .cartpage {
   background-image: url('./backgroundImage.png');
   background-size: cover;
-
   background-position: center;
   display: flex;
   background-repeat: no-repeat;
   width: 100vw;
-  height: 100vh;
+  height: auto;
   /* overflow: hidden; */
 }
 .backgroundsvg {
   position: absolute;
-  height: 100vh;
+  height: auto;
   overflow: visible;
   left: -20%;
   width: 100%;
@@ -22,7 +21,7 @@
   z-index: 3;
 }
 .cartItem {
-  height: 430px;
+  height: 350px;
   overflow-y: auto;
   width: 500px;
   padding-bottom: 10px;
