--- a/frontend/src/shared/components/NavBar/NavBar.css
+++ b/frontend/src/shared/components/NavBar/NavBar.css
@@ -14,6 +14,8 @@
   height: 110%;
 }
 .navbar-collapse {
+  display: flex;
+  text-align: center;
   padding-top: 15px;
   padding-left: 190px;
 }
@@ -48,14 +50,6 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-}
-#dropdownMenuButton1 {
-  color: black;
-  background-color: white;
-  border-color: white;
-  border-radius: 0%;
-  font-size: 30px;
-  padding-top: 20px;
 }
 #last {
   color: #ea580c;
