--- a/frontend/src/patient/pages/patientRegister.module.css
+++ b/frontend/src/patient/pages/patientRegister.module.css
@@ -1,5 +1,12 @@
 .background {
     background-color: #96B7C7;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .mainBackground {
@@ -39,15 +46,22 @@
     line-height: 24px;
     color: #0F172A;
     margin-left: 5%;
-    margin-top: 20%;
+    margin-top: 5%;
     width: 80%;
+}
+.combine1{
+    display: flex;
+    margin-bottom: 2%;
+}
+
+.date{
+    flex: 2;
 }
 
 .p1 {
     display: flex;
     text-align: left;
-    margin-top: -50px;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     font-size: 36px;
     letter-spacing: 10%;
     font-weight: bolder;
@@ -79,6 +93,7 @@
     padding-bottom: 5px;
     padding-top: 5px;
     margin-bottom: 20px;
+    flex: 1;
 }
 
 .textBox::placeholder {
@@ -126,4 +141,14 @@ input.numField::-webkit-inner-spin-button {
 
 input[type=number].numField {
     -moz-appearance: textfield;
+}
+.navbar-brand {
+    font-size: 32px;
+    font-weight: bolder;
+    padding-bottom: 10px;
+    padding-right: 48px;
+    padding-left: 80px;
+  }
+.logoContainer{
+    margin-top: 4%;
 }
