--- a/frontend/src/pharmacist/components/AddMedicine.module.css
+++ b/frontend/src/pharmacist/components/AddMedicine.module.css
@@ -108,8 +108,9 @@
   }
 
   .saveButtonContainer2 {
-    margin-right: 40px;
-    margin-top: 10px;
+    position: absolute;
+    top: 25px;
+    right: 40px;
     display: flex;
     justify-content: end;
   }
@@ -132,10 +133,10 @@
     width: 94px;
     height: 36px;
     flex-shrink: 0;
-    background-color: #6ED294;
+    background-color: white;
     border-radius: 11px ;
     border-style: none;
-    color: var(--white-100, #FFF);
+    color: var(--white-100, #6ED294);
     font-family: Poppins;
     font-size: 20px;
     font-style: normal;
@@ -143,7 +144,7 @@
     line-height: 20px;
 }
 .saveButton:hover{
-    background-color: #289853;
+    background-color: whitesmoke;
 }
 .archiveButton:hover{
     background-color: #ED3443;
@@ -169,3 +170,41 @@
     font-weight: 400;
     line-height: 18px; /* 257.143% */
     }
+
+
+    .dropzoneTitle {
+      font-size: 16px;
+      margin-top: 15px;
+      text-align: start;
+      margin-left: 10px;
+    }
+    
+    .myDropzone {
+      background-color: #F8F8FF;
+      width: 100%;
+      font-weight: 600;
+      font-size: 12px;
+      line-height: 28px;
+      color: #0F0F0F;
+      border: 1px dashed #96B7C7;
+      border-radius: 12px;
+      /* margin-top: 10px; */
+      height: 150px;
+      padding-top: 25px;
+      padding-bottom: 15px;
+      padding-inline: 10px;
+      cursor: pointer;
+    }
+    
+    .dropzoneSubtitle {
+      color: #676767;
+      font-size: 10px;
+      text-align: center;
+      font-weight: 400;
+      line-height: 10px;
+    }
+    
+    .myDropzone aside {
+      justify-content: center;
+    }
+    
