--- a/frontend/src/shared/components/Modal/Modal.module.css
+++ b/frontend/src/shared/components/Modal/Modal.module.css
@@ -11,7 +11,7 @@
 .modal {
   position: absolute;
   top: 5vh;
-  bottom: 3%;
+  bottom: 5vh;
   left: 5%;
   width: 90%;
   background-color: white;
