--- a/frontend/src/patient/pages/payment/CheckoutForm.module.css
+++ b/frontend/src/patient/pages/payment/CheckoutForm.module.css
@@ -1,23 +1,10 @@
-#payment-form {
-  padding: 30px;
-  width: 700px;
-}
-#payment-element {
-  padding: 20px;
-  padding-top: 0px;
-  height: smaller;
-  border-radius: 10px;
-  border-color: #000;
-}
+
 .buttons {
   align-items: right;
   width: 638px;
   margin-left: 300px;
 }
-#payment-messaage {
-  font-family: 'poppins';
-  font-weight: 100;
-}
+
 .buttons button {
   /* display: flex; */
   padding: 8px 41px;
@@ -34,10 +21,10 @@
   font-weight: 700;
   line-height: normal;
 }
-.me-3{
+.me3{
   margin-left: 100px;
 }
-.me-2{
+.me2{
   background-color: rgba(0, 0, 0, 0.2);
 
 }
@@ -111,8 +98,8 @@
   padding-bottom: 4px;
   padding-top: 14px;
 }
-#title,
-#title2 {
+.title,
+.title2 {
   color: #000;
 
   font-family: 'Poppins';
@@ -122,7 +109,7 @@
   line-height: normal;
   text-decoration: underline;
 }
-#title2 {
+.title2 {
   margin-top: '15px';
   margin-left: '145px';
   text-decoration: 'none';
@@ -130,24 +117,7 @@
   color: 'white';
   font-weight: 300;
 }
-.hellokitty {
-  width: 58.806px;
-  height: 39.469px;
-  flex-shrink: 0;
-  padding: 5px;
-  outline: 3px solid black;
-  border-radius: 5px;
-  transition: all 0.2s ease;
-  cursor: pointer;
-}
-.hellokitty.active {
-  /* Define highlighted effect styles like shadow, outline, etc. */
-  /* For example: */
-  box-shadow: 0 0 10px 2px white;
-  transform: scale(1.2);
-  transition: all 0.2s ease;
- 
-}
+
 .choicePayment {
   font-family: 'Inter';
   font-size: 18px;
