--- a/frontend/src/patient/pages/payment/style.module.css
+++ b/frontend/src/patient/pages/payment/style.module.css
@@ -4,21 +4,15 @@
   flex-direction: row;
   justify-content: center;
   width: 100%; /* Fill the entire width of the screen */
-  height: 150vh; /* Fill the entire height of the screen */
+  height: 180vh; /* Fill the entire height of the screen */
   margin-left: 0px;
 }
 
 .p-Grid {
   background-color: red;
 }
-.carousel-container {
-  width: 338px;
-  height: 201px;
-  padding: 0 -100px;
 
-  margin: 0 auto; /* To center align the carousel */
-}
-#indexCartItem {
+.indexCartItem {
   color: #000;
   font-family: 'Comfortaa';
   font-size: 16px;
@@ -26,7 +20,7 @@
   font-weight: 400;
   line-height: normal;
 }
-#nameCartItem {
+.nameCartItem {
   color: #737373;
   font-family: 'Poppins';
   font-size: 18px;
@@ -34,7 +28,7 @@
   font-weight: 400;
   line-height: normal;
 }
-#priceCartItem {
+.priceCartItem {
   color: #000;
   font-family: 'Poppins';
   font-size: 24px;
@@ -61,13 +55,7 @@
   top: 4%;
 }
 
-#payment-form {
-  margin-left: 638px;
-  width: 638px;
-}
-#payment-element {
-  width: 638px;
-}
+
 
 .checkout .div {
   background-color: #ffffff;
@@ -77,10 +65,10 @@
   width: 100%; /* Fill the entire width of the screen */
 }
 
-.checkout .overlap-2 {
+.checkout .overlap2 {
   background-image: url(https://cdn.animaapp.com/projects/6536ca3087fc067bdeed2d5e/releases/656d37045c84f45c768146e6/img/mask-group.png);
   background-size: cover; /* Ensure the background covers the entire container */
-  height: 150vh; /* Fill the entire height of the container */
+  height: 180vh; /* Fill the entire height of the container */
   position: relative;
 }
 
@@ -94,7 +82,7 @@
   width: 1240px;
 }
 
-.checkout .overlap-group {
+.checkout .overlapGroup {
   /* Remove fixed height */
   /* height: 1024px; */
 
@@ -105,10 +93,10 @@
   width: 100%;
 }
 
-.checkout .overlap-3 {
+.checkout .overlap3 {
   background-image: url(https://cdn.animaapp.com/projects/6536ca3087fc067bdeed2d5e/releases/656d37045c84f45c768146e6/img/vector.svg);
   background-size: 100% 100%;
-  height: 150vh;
+  height: 180vh;
   left: 0;
   position: absolute;
   top: 0;
@@ -133,20 +121,4 @@
   margin-top: 112px;
   margin-left: 80px;
 }
-#totalss{
-  display: flex;
-padding: 14px 66px;
-justify-content: center;
-align-items: center;
-gap: 10px;
-flex: 1 0 0;
-border-radius: 5px 5px 5px 5px;
-background: #000;
-color: var(--white-100, #FFF);
-font-family: 'Poppins';
-font-size: 22px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin-top: 60px;
-}
+
