--- a/frontend/src/admin/ManageUsers/components/AdminForm.module.css
+++ b/frontend/src/admin/ManageUsers/components/AdminForm.module.css
@@ -18,7 +18,7 @@
   
 }
 .topBorder {
-    border-top: solid 73px #6ED294;
+    border-top: solid 73px #EA580C;
     position: inherit;
     left: 0%;
     top: -5%;
@@ -72,7 +72,7 @@
     left: 77%;
     margin: 54px 13px 13px 12px;
     border-radius: 11px;
-    background: #6ED294;
+    background: #EA580C;
     width: 94px;
     height: 36px;
     color: #FFF;
