--- a/frontend/src/patient/pages/patientRegister.module.css
+++ b/frontend/src/patient/pages/patientRegister.module.css
@@ -142,6 +142,7 @@ input.numField::-webkit-inner-spin-button {
 
 input[type=number].numField {
     -moz-appearance: textfield;
+    appearance: textfield;
 }
 .navbar-brand {
     font-size: 32px;
