--- a/frontend/src/pharmacist/pages/messages/Messages.module.css
+++ b/frontend/src/pharmacist/pages/messages/Messages.module.css
@@ -3,6 +3,7 @@
 }
 
 .myMessages{
+    margin-top: 10px;
     overflow: auto;
 }
 
@@ -177,7 +178,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .backArrow{
