--- a/frontend/src/login/components/login.module.css
+++ b/frontend/src/login/components/login.module.css
@@ -13,6 +13,15 @@
     background-size: cover; 
     background-position: center;
   }
+  #rightCol2 {
+    height:100vh;
+    border-radius: 50px 0 0 50px ;
+    /* background-image: url('../images/Rectangle1.png');  */
+    background-size: cover; 
+    background-position: center;
+    background-color: transparent;
+    /* margin-top: 30px; */
+  }
 .logo{
     text-align: left;
     padding-top: 2rem;
